--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,9 @@ loader_version_range=[43,)
 mapping_channel=official
 mapping_version=1.19.2
 
+##JEI
+jei_version=11.6.0.1024
+
 ## Mod Properties
 mod_id=potion_shrines
 mod_name=Potion Shrines
