--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,20 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 ## Environment Properties
-minecraft_version=1.19.2
-minecraft_version_range=[1.19.2,1.20)
-forge_version=43.4.0
-forge_version_range=[43,)
-loader_version_range=[43,)
+minecraft_version=1.20.1
+minecraft_version_range=[1.20.1,1.21)
+forge_version=47.3.0
+forge_version_range=[47,)
+loader_version_range=[47,)
 mapping_channel=official
-mapping_version=1.19.2
-
-##JEI
-jei_version=11.6.0.1024
+mapping_version=1.20.1
 
 ## Mod Properties
 mod_id=potion_shrines
 mod_name=Potion Shrines
 mod_license=MIT
-mod_version=1.19.2-Forge-1.2.2
-
-mod_group_id=com.dreu.potionshrines
+mod_version=1.2.2
+mod_group_id=com.drue.potion_shrines
 mod_authors=Dreu, Fleece
-mod_description=Adds Potion Shrines which generate around the world, these give Potion Effects when touched.\nComplete Config options
+mod_description=Adds Potion Shrines which generate around the world, these give Potion Effects when touched.
